[package]
name = "inkwordle"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "InkWordle for the reMarkable Paper Pro — write your guesses by hand, recognized on-device. No LLM."

[dependencies]
libc = "0.2"
signal-hook = "0.3"
ab_glyph = "0.2"
tract-onnx = "0.21"

[features]
takeover = []

# Dev iteration (host builds).
[profile.dev]
opt-level = 1

# Maximum on-device performance (this is the ship profile).
[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
